--- a/roster.html
+++ b/roster.html
@@ -52,41 +52,57 @@
     </nav>
     <!--Hero Section-->
     <main>
-      <div class="roster__header">
-        <h1>Roster</h1>
-      </div>
-      <div class="roster__container">
-        <div class="card__container">
-          <div class="image-container">
-            <img src="images/logo.png" alt="Player Image" />
-          </div>
-          <div class="profile__container">
-            <div class="profile-header">
-              <h1 class="name">Brodie Lee</h1>
+      <div class="shop">
+        <div class="roster__header">
+          <h1>Roster</h1>
+        </div>
+        <div class="roster__container">
+          <div class="card__container">
+            <div class="image-container">
+              <img src="images/roster/brodie.jpg" alt="Player Image" />
             </div>
-            <div class="profile-body">
+            <div class="profile__container">
+              <div class="profile-header">
+                <h1 class="name">Brodie Lee</h1>
+                <h2 class="board-position"><i>webmaster</i></h2>
+              </div>
               <table class="details">
-                <thead>
-                  <tr>
-                    <td class="position">Position:</td>
-                    <td class="year">Year:</td>
-                    <td class="hometown">Hometown:</td>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td class="player_position"><b>Lock</b></td>
-                    <td class="player_year">Jr.</td>
-                    <td class="player_hometown">Brookline, MA</td>
-                  </tr>
-                </tbody>
+                <tr>
+                  <th class="position">Position:</th>
+                  <th class="year">Year:</th>
+                  <th class="hometown">Hometown:</th>
+                </tr>
+                <tr>
+                  <td class="player_position">Lock</td>
+                  <td class="player_year">Jr.</td>
+                  <td class="player_hometown">Brookline, MA</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <div class="card__container">
+            <div class="image-container">
+              <img src="images/logo.png" alt="Player Image" />
+            </div>
+            <div class="profile__container">
+              <div class="profile-header">
+                <h1 class="name">Brodie Lee</h1>
+              </div>
+              <table class="details">
+                <tr>
+                  <th class="position">Position:</th>
+                  <th class="year">Year:</th>
+                  <th class="hometown">Hometown:</th>
+                </tr>
+                <tr>
+                  <td class="player_position">Lock</td>
+                  <td class="player_year">Jr.</td>
+                  <td class="player_hometown">Brookline, MA</td>
+                </tr>
               </table>
             </div>
           </div>
         </div>
-      </div>
-      <div>
-        <!--javascript-->
       </div>
     </main>
     <!--Footer-->
