roster proof of concept

--- a/roster.html
+++ b/roster.html
@@ -82,11 +82,99 @@
           </div>
           <div class="card__container">
             <div class="image-container">
-              <img src="images/logo.png" alt="Player Image" />
+              <img src="images/roster/willer.jpg" alt="Player Image" />
             </div>
             <div class="profile__container">
               <div class="profile-header">
-                <h1 class="name">Brodie Lee</h1>
+                <h1 class="name">Will Miller</h1>
+              </div>
+              <table class="details">
+                <tr>
+                  <th class="position">Position:</th>
+                  <th class="year">Year:</th>
+                  <th class="hometown">Hometown:</th>
+                </tr>
+                <tr>
+                  <td class="player_position">Fullback</td>
+                  <td class="player_year">Jr.</td>
+                  <td class="player_hometown">Washington, DC</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <div class="card__container">
+            <div class="image-container">
+              <img src="images/roster/egan.jpg" alt="Player Image" />
+            </div>
+            <div class="profile__container">
+              <div class="profile-header">
+                <h1 class="name">George Egan</h1>
+              </div>
+              <table class="details">
+                <tr>
+                  <th class="position">Position:</th>
+                  <th class="year">Year:</th>
+                  <th class="hometown">Hometown:</th>
+                </tr>
+                <tr>
+                  <td class="player_position">Flanker</td>
+                  <td class="player_year">So.</td>
+                  <td class="player_hometown">Omaha, NE</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <div class="card__container">
+            <div class="image-container">
+              <img src="images/roster/gav.jpg" alt="Player Image" />
+            </div>
+            <div class="profile__container">
+              <div class="profile-header">
+                <h1 class="name">Gavin Brady</h1>
+              </div>
+              <table class="details">
+                <tr>
+                  <th class="position">Position:</th>
+                  <th class="year">Year:</th>
+                  <th class="hometown">Hometown:</th>
+                </tr>
+                <tr>
+                  <td class="player_position">Fly-half</td>
+                  <td class="player_year">Sr.</td>
+                  <td class="player_hometown">Washington, DC</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <div class="card__container">
+            <div class="image-container">
+              <img src="images/roster/aub.jpg" alt="Player Image" />
+            </div>
+            <div class="profile__container">
+              <div class="profile-header">
+                <h1 class="name">Aubrey Aird</h1>
+              </div>
+              <table class="details">
+                <tr>
+                  <th class="position">Position:</th>
+                  <th class="year">Year:</th>
+                  <th class="hometown">Hometown:</th>
+                </tr>
+                <tr>
+                  <td class="player_position">Number 8</td>
+                  <td class="player_year">Sr.</td>
+                  <td class="player_hometown">London, England</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <div class="card__container">
+            <div class="image-container">
+              <img src="images/roster/dotson.jpg" alt="Player Image" />
+            </div>
+            <div class="profile__container">
+              <div class="profile-header">
+                <h1 class="name">Gus Dotson</h1>
               </div>
               <table class="details">
                 <tr>
@@ -97,7 +185,7 @@
                 <tr>
                   <td class="player_position">Lock</td>
                   <td class="player_year">Jr.</td>
-                  <td class="player_hometown">Brookline, MA</td>
+                  <td class="player_hometown">New York, NY</td>
                 </tr>
               </table>
             </div>
